--- a/tex/espacos-metricos.tex
+++ b/tex/espacos-metricos.tex
@@ -6,7 +6,7 @@ Aqui apresentamos noções básicas relativas a espaços métricos, amplamente u
 
 \begin{defn}
     Dado um conjunto \( X \) qualquer, uma \emph{métrica} em \( X \) é uma função \( d : X \times X \to \R \) tal que:
-    \begin{enumerate}[label=\roman*)]
+    \begin{enumerate}[label=(\roman*)]
         \item \( d(x, x) = 0 \);
         \item \( d(x, y) > 0 \) se \( x \neq y \);
         \item \( d(x, y) = d(y, x) \);
