--- a/tex/hahn-banach.tex
+++ b/tex/hahn-banach.tex
@@ -35,7 +35,7 @@ Perceba que uma função \( f : X \to Y \) é uma relação de \( X \) em \( Y \
 Quando \( R \subset X \times X \), diremos que \( R \) é uma relação em \( X \).
 
 Uma \emph{relação de ordem parcial} em \( X \) é uma relação que satisfaz, dados \( x, y, z \in X \):
-\begin{enumerate}[label=\roman*)]
+\begin{enumerate}[label=(\roman*)]
     \item \( x R x \) (\emph{reflexividade});
     \item Se \( x R y \) e \( y R x \), então \( x = y \) (\emph{antisimetria});
     \item Se \( x R y \) e \( y R z \), então \( x R z \) (\emph{transitividade}).
@@ -165,7 +165,7 @@ Começamos apresentando uma aplicação do Teorema de Hahn-Banach para ilustrar 
 \begin{teo}
     Seja \( V \) um espaço vetorial normado.
     Então:
-    \begin{enumerate}[label=\roman*)]
+    \begin{enumerate}[label=(\roman*)]
         \item Se \( 0 \neq v \in V \), então existe \( f \in V^{ * } \) tal que \( f(v) = \norm{ v } \) e \( \norm{ f } = 1 \);
         \item Se \( v \) e \( w \) são elementos distintos de \( V \), então existe \( f \in V^{ * } \) tal que \( f(v) \neq f(w) \);
         \item Se \( v \in V \) satisfaz \( f(v) = 0 \) para todo \( f \in V^{ * } \), então \( v = 0 \);
