--- a/tex/main.tex
+++ b/tex/main.tex
@@ -1,31 +1,16 @@
 \documentclass[a4paper, 12pt]{article}
 
-\usepackage{mathtools, amsthm}
-\usepackage{exercise-sheet}
-\usepackage{global-macros}
-\usepackage{tikz}
-\usetikzlibrary{positioning}
-\usepackage[
-    backend=biber,
-    style=alphabetic,
-    sorting=ynt
-]{biblatex}
-\usepackage{csquotes}
-\usepackage{hyperref}
+\input{preamble}
 
 \addbibresource{../bib/bibliografia.bib}
 
-\input{preamble}
-
-\title{Teorema da Aproximação Universal}
+\title{Sobre o Teorema da Aproximação Universal}
 \author{Caio Lins}
 \date{\today}
 
 \begin{document}
 
 \maketitle
-
-\newpage
 
 \tableofcontents
 
