Small changes in text and table of contents

--- a/tex/introducao.tex
+++ b/tex/introducao.tex
@@ -78,7 +78,7 @@ Ou seja, o Teorema da Aproximação Universal, doravante conhecido como \uat , e
 Essa é uma pergunta de extrema relevância, tanto teórica como prática pois, como apontado em \cite{lipmann}, redes neurais artificiais possuem diversas aplicações em campos voltados ao desenvolvimento de classificadores robustos, como a teoria de reconhecimento de fala e de imagens.
 Saber que é possível realizar aproximações arbitrariamente boas utilizando redes neurais artificiais dá mais segurança e incentivo à pesquisa nessas áreas.
 
-A demonstração do \uat \ envolve resultados de teoria da medida e análise funcional, os quais são importantes por si mesmos e, por isso, são discutidos em seções próprias.
+A demonstração do \uat \ envolve resultados de Teoria da Medida e Análise Funcional, os quais são importantes por si mesmos e, por isso, são discutidos em seções próprias.
 Alguns conhecimentos necessários para entendê-los são apresentados como outro apêndice.
 De fato, a demonstração desse resultado é mais densa que a dos outros, apesar de que ele, ao contrário do problema de Hilbert, lida apenas com aproximações.
 Uma possível explicação para essa diferença será apresentada na seção correspondente.
