--- a/tex/hilbert.tex
+++ b/tex/hilbert.tex
@@ -88,7 +88,7 @@ Nos restringimos a mencionar que ela necessita utiliza a hipótese da irracional
     Podemos supor, sem perda de generalidade, que \( \norm{ f }_{ \infty } = 1 \).
     Seja \( (h_{ j })_{ j\in\N } \) uma sequência de funções pertencentes a \( C(\I^2) \) tal que o conjunto \( \left\{ h_{ j } : j\in \N \right\} \) é denso na esfera unitária de \( C(\I^2) \).
     Na notação do Lema \ref{lem: uf}, cada \( h_{ j } \) determina um conjunto \( U_{ j } = U_{ h_{ j } } \subset  [C(\I)]^{ 5 } \) aberto e denso.
-    Pelo Teorema da Categoria de :aire, o conjunto \[
+    Pelo Teorema da Categoria de Baire, o conjunto \[
         V = \bigcap_{ j\in\N } U_{ j }
     \]
     é denso em \( [C(\I)]^{ 5 } \).
