--- a/tex/main.tex
+++ b/tex/main.tex
@@ -22,10 +22,11 @@
 \input{hahn-banach}
 \input{riesz}
 \input{aproximacao-universal}
+\input{conclusao}
 
 \newpage
 
-\printbibliography[ heading=bibintoc, title={Referências}]
+\printbibliography[heading=bibintoc, title={Referências}]
 
 \newpage
 
