--- a/tex/preamble.tex
+++ b/tex/preamble.tex
@@ -54,6 +54,7 @@
 \DeclareMathOperator{\vspan}{span}
 \DeclareMathOperator{\proj}{proj}
 \DeclareMathOperator{\lin}{Lin}
+\DeclareMathOperator{\supp}{supp}
 
 %% Numbering
 
