--- a/tex/riesz.tex
+++ b/tex/riesz.tex
@@ -244,7 +244,7 @@ Porém antes, uma definição:
         \sum_{ k=2 }^{ m } f(t_{ k }) \chi_{ (t_{ k-1 }, t_{ k }] }(x)
     .\end{align*}
     Perceba que \( f_{ 1 } \in C(J) \) e que \( f_{ 2 } \) é uma função escada em \( J \).
-    Está claro que \( \sup \left\{ \abs{ f_{ 2 }(x) - f(x) } : x \in J \right\} \leq \varepsilon \) e com um certo esforço é possível mostrar que \( \norm{ f_{ 1 } - f }_{ \infty } \leq \varepsilon \).
+    É claro \( \sup \left\{ \abs{ f_{ 2 }(x) - f(x) } : x \in J \right\} \leq \varepsilon \) e com um certo esforço é possível mostrar que \( \norm{ f_{ 1 } - f }_{ \infty } \leq \varepsilon \).
     Portanto, temos
     \begin{equation}
         \abs{ G(f) - g(f_{ 1 }) } \leq \varepsilon \norm{ G }
