--- a/bib/bibliografia.bib
+++ b/bib/bibliografia.bib
@@ -8,6 +8,7 @@
   url     = {https://doi.org/10.1007/BF02551274},
   doi     = {10.1007/BF02551274}
 }
+
 @misc{weierstrass,
   author    = {Matt Young},
   title     = {The Stone-Weierstrass theorem},
@@ -15,6 +16,7 @@
   year      = {2006},
   publisher = {Queen's University at Kingston}
 }
+
 @article{hilbert,
   author  = {Sidney A. Morris},
   title   = {Hilbert 13: are there any genuine continuous multivariate real-valued functions?},
@@ -26,6 +28,7 @@
   pages   = {107--118},
   url     = {https://doi.org/10.1090/bull/1698}
 }
+
 @book{func-anal,
   author    = {César R. de Oliveira},
   editor    = {IMPA},
@@ -33,6 +36,7 @@
   publisher = {IMPA},
   year      = {2012}
 }
+
 @book{key,
   author    = {Elon Lages Lima},
   editor    = {Edgard Bl\"{u}cher, Ltda.},
@@ -40,6 +44,7 @@
   publisher = {Edgard Bl\"{u}cher, Ltda.},
   year      = {1977}
 }
+
 @article{lipmann,
   author  = {R. {Lippmann}},
   journal = {IEEE ASSP Magazine},
@@ -50,6 +55,7 @@
   pages   = {4-22},
   doi     = {10.1109/MASSP.1987.1165576}
 }
+
 @book{bartle,
   author    = {Robert G. Bartle},
   editor    = {John Wiley \& Sons, inc.},
@@ -57,6 +63,7 @@
   publisher = {Wiley-Interscience},
   year      = {1995}
 }
+
 @book{royden,
   author    = {H. L. Royden},
   editor    = {Collier Macmillian Canada, Inc.},
@@ -64,10 +71,20 @@
   publisher = {Macmillian Publishing Company},
   year      = {1988}
 }
+
 @misc{fourier,
   author    = {Gordan Zitkovic},
   title     = {Characteristic Functions},
   publisher = {University of Texas},
   year      = {2013},
   url       = {https://web.ma.utexas.edu/users/gordanz/notes/characteristic.pdf}
+}
+
+@article{hornik91,
+  author  = {K. {Hornik}},
+  journal = {Neural Networks},
+  title   = {Approximation Capabilities of Multilayer Feedforward Networks},
+  year    = {1991},
+  volume  = {4},
+  pages   = {251-257},
 }
