Adds advisor name

--- a/tex/main.tex
+++ b/tex/main.tex
@@ -5,7 +5,7 @@
 \addbibresource{../bib/bibliografia.bib}
 
 \title{Sobre o Teorema da Aproximação Universal}
-\author{Caio Lins}
+\author{Caio Lins \\ Orientador: Yuri Saporito}
 \date{\today}
 
 \begin{document}
