Correções no relatorio

--- a/relatorio/tex/aproximacao-universal.tex
+++ b/relatorio/tex/aproximacao-universal.tex
@@ -70,7 +70,7 @@ Tendo provado o teorema para funções discriminatórias, nos resta mostrar que,
 
 \begin{proof}
     Seja \( \sigma \) uma sigmoide e suponha que, para uma dada medida \( \mu \in M(\I^{ n }) \), tenhamos \[
-        \int_{ \I^{ n } } \sigma(y^{ T }x + \theta) \ \mathrm{d}\mu(x)
+        \int_{ \I^{ n } } \sigma(y^{ T }x + \theta) \ \mathrm{d}\mu(x) = 0
     \]
     para todos \( y \in \R^{ n } \) e \( \theta \in \R \).
     Desejamos provar que isso implica \( \mu = 0 \).
