--- a/relatorio/tex/riesz.tex
+++ b/relatorio/tex/riesz.tex
@@ -170,7 +170,7 @@ Porém antes, uma definição:
 
     Começamos definindo uma classe de funções auxiliares que nos será útil.
     Para todo \( t \) tal que \( a \leq t < b \), seja \( \varphi_{ t,n } \) a função pertencente a \( C(J) \) que é igual a \( 1 \) em \( [a, t] \), é igual a \( 0 \) em \( \left(t+ \frac{ 1 }{ n }, b\right] \) e é linear em \( \left(t, t + \frac{ 1 }{ n }\right] \).
-    Se \( n \leq m \) e \( x \in J \), então \( 0 \leq \varphi_{ t, n }(x) \leq \varphi_{ t, m }(x) \leq 1 \), de modo que, pela Observação \ref{rem: G_crescente}, as sequências \( (G(\varphi_{ t, n }))_{ n\in\N } \) são monótonas não-crescentes e limitadas.
+    Se \( n \leq m \) e \( x \in J \), então \( 0 \leq \varphi_{ t, m }(x) \leq \varphi_{ t, n }(x) \leq 1 \), de modo que, pela Observação \ref{rem: G_crescente}, as sequências \( (G(\varphi_{ t, n }))_{ n\in\N } \) são monótonas não-crescentes e limitadas.
     Portanto, para cada \( t \in [a, b) \) podemos definir \[
         g(t) = \lim_{ n\to\infty } G(\varphi_{ t,n })
     .\]
